syntax = "proto3";

package fynca.services.workers.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import weak "google/protobuf/empty.proto";

option go_package = "git.underland.io/ehazlett/fynca/api/services/workers/v1;workers";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

service Workers {
        rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse);
        rpc ControlWorker(ControlWorkerRequest) returns (ControlWorkerResponse);
}

message ListWorkersRequest {}

message ListWorkersResponse {
        repeated Worker workers = 1;
}

message ControlWorkerRequest {
        string worker_id = 1 [(gogoproto.customname) = "WorkerID"];
        oneof message {
                WorkerStop stop = 2;
        }
}

message WorkerStop {}

message ControlWorkerResponse {}

message Worker {
        string name = 1;
        string version = 2;
        uint32 cpus = 3 [(gogoproto.customname) = "CPUs"];
        int64 memory_total = 4;
        int64 memory_available = 5;
        repeated string gpus = 6 [(gogoproto.customname) = "GPUs"];
        double load1 = 7;
        double load5 = 8;
        double load15 = 9;
}
